...
                        custom:pb_colorPressed="@android:color/holo_blue_dark" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:visibility="gone"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_firstname_signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/white"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/input_firstname_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lastname_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/input_lastname_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/white"
...
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/input_email_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/white"
...
                        android:textColorHint="@color/white"
                        app:passwordToggleDrawable="@drawable/icon_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">

                        <EditText
                            android:id="@+id/input_pass_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
...
                        android:textColorHint="@color/white"
                        app:passwordToggleDrawable="@drawable/icon_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">

                        <EditText
                            android:id="@+id/input_confirm_pass_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />
                    </android.support.design.widget.TextInputLayout>


                    <com.dd.processbutton.FlatButton
                        android:id="@+id/ok_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/signup"
                        android:textColor="@android:color/white"
                        custom:pb_colorNormal="@android:color/holo_blue_light"
                        custom:pb_colorPressed="@android:color/holo_blue_dark" />


                </LinearLayout>
...
