...
    <string name="title_activity_city_history">City History</string>

    <!-- Exit App Strings -->
    <string name="confirm_exit_message">Press back again to exit</string>

    <!-- login/signup strings -->
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>
    <string name="empty_first_name">First name can\'t remain empty</string>
    <string name="empty_last_name">Last name can\'t remain empty</string>

    <!-- reset password strings -->
    <string name="submit">Submit</string>
...
    <string name="text_monuments">Monuments</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_city_trends">City Trends</string>
    <string name="text_city_map">City Map</string>
    <string name="text_login"><u>Already a member? Login</u></string>
    <string name="text_signup_or"><u>Not registered yet? Create new account</u></string>
    <string name="text_go">Go</string>
    <string name="text_locate">Locate</string>
    <string name="text_more">More</string>
    <string name="text_title">Title</string>
    <string name="text_call">Call</string>
    <string name="text_book">Book</string>
...
